@@ -1,0 +1,81 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.tez.dag.history.recovery;
+
+import java.io.IOException;
+import java.util.Random;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.yarn.api.records.ApplicationId;
+import org.apache.hadoop.yarn.util.SystemClock;
+import org.apache.tez.dag.api.TezConfiguration;
+import org.apache.tez.dag.app.AppContext;
+import org.apache.tez.dag.history.DAGHistoryEvent;
+import org.apache.tez.dag.history.events.TaskStartedEvent;
+import org.apache.tez.dag.records.TezDAGID;
+import org.apache.tez.dag.records.TezTaskID;
+import org.apache.tez.dag.records.TezVertexID;
+import org.junit.Test;
+
+import static org.mockito.Mockito.*;
+import static org.junit.Assert.*;
+
+public class TestRecoveryService {
+
+  private static String TEST_ROOT_DIR = "target" + Path.SEPARATOR
+      + TestRecoveryService.class.getName() + "-tmpDir";
+
+  @Test(timeout = 5000)
+  public void testDrainEvents() throws IOException {
+    Configuration conf = new Configuration();
+    AppContext appContext = mock(AppContext.class);
+    when(appContext.getCurrentRecoveryDir()).thenReturn(new Path(TEST_ROOT_DIR));
+    when(appContext.getClock()).thenReturn(new SystemClock());
+
+    MockRecoveryService recoveryService = new MockRecoveryService(appContext);
+    conf.setBoolean(RecoveryService.TEZ_TEST_RECOVERY_DRAIN_EVENTS_WHEN_STOPPED, true);
+    recoveryService.init(conf);
+    recoveryService.start();
+    TezDAGID dagId = TezDAGID.getInstance(ApplicationId.newInstance(System.currentTimeMillis(), 1),1);
+    int randEventCount = new Random().nextInt(100) + 100;
+    for (int i=0; i< randEventCount; ++i) {
+      recoveryService.handle(new DAGHistoryEvent(dagId,
+          new TaskStartedEvent(TezTaskID.getInstance(TezVertexID.getInstance(dagId, 1), 1), "v1", 0L, 0L)));
+    }
+    recoveryService.stop();
+    assertEquals(randEventCount, recoveryService.processedRecoveryEventCounter.get());
+  }
+
+  private static class MockRecoveryService extends RecoveryService {
+
+    public AtomicInteger processedRecoveryEventCounter = new AtomicInteger(0);
+
+    public MockRecoveryService(AppContext appContext) {
+      super(appContext);
+    }
+
+    @Override
+    protected void handleRecoveryEvent(DAGHistoryEvent event)
+        throws IOException {
+      super.handleRecoveryEvent(event);
+      processedRecoveryEventCounter.addAndGet(1);
+    }
+  }
+}
